--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@ant-design/x": "^1.2.0",
+    "@tailwindcss/vite": "^4.1.7",
     "@types/node": "^22.15.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.0",
+    "tailwindcss": "^4.1.7",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
