--- a/packages/ai-chat-pc/package.json
+++ b/packages/ai-chat-pc/package.json
@@ -2,6 +2,7 @@
   "name": "@ai-chat/pc",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build"
