--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:pg": "pnpm run --F @ai-chat/plug dev",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format": "prettier --write \"**/*.{js,ts,jsx,tsx,css,html,md,json}\"",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -26,9 +27,12 @@
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "prettier": "^3.5.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
