--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.25.0",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.3.7",
@@ -47,4 +49,3 @@
     "vite": "^6.3.5"
   }
 }
-
