feat: login UI and store

--- a/packages/ai-chat-pc/package.json
+++ b/packages/ai-chat-pc/package.json
@@ -9,5 +9,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/react-transition-group": "^4.4.12",
+    "react-transition-group": "^4.4.5"
+  }
 }
