--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "~5.6.1",
     "@ant-design/x": "^1.2.0",
     "@tailwindcss/vite": "^4.1.7",
     "@types/node": "^22.15.18",
+    "antd": "^5.25.2",
+    "dayjs": "^1.11.13",
+    "i18next": "^25.2.0",
+    "i18next-browser-languagedetector": "^8.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.1",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.7",
     "zustand": "^5.0.4"
