--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@ant-design/x": "^1.2.0",
     "@tailwindcss/vite": "^4.1.7",
     "@types/node": "^22.15.18",
+    "antd": "^5.25.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.0",
