--- a/package.json
+++ b/package.json
@@ -1,51 +1,42 @@
 {
-  "name": "ai-chat",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@ai-chat/plug",
+  "version": "1.0.0",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev:pc": "pnpm run --F @ai-chat/pc dev",
-    "dev:pg": "pnpm run --F @ai-chat/plug dev",
-    "build": "tsc -b && vite build",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "lint": "eslint .",
-    "format": "prettier --write \"**/*.{js,ts,jsx,tsx,css,html,md,json}\"",
-    "preview": "vite preview",
-    "prepare": "husky"
-  },
-  "lint-staged": {
-    "*.{js,ts,jsx,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ]
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@ant-design/x": "^1.2.0",
-    "@tailwindcss/vite": "^4.1.7",
-    "@types/node": "^22.15.18",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.0",
-    "tailwindcss": "^4.1.7",
-    "zustand": "^5.0.4"
+    "antd": "^5.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^18.3.21",
-    "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
+    "@eslint/js": "^9.27.0",
+    "@types/chrome": "^0.0.237",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "husky": "^9.1.7",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
+    "globals": "^16.1.0",
     "lint-staged": "^16.0.0",
+    "postcss": "^8.4.24",
     "prettier": "^3.5.3",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.9"
   }
 }
