--- a/packages/ai-chat-plug/package.json
+++ b/packages/ai-chat-plug/package.json
@@ -5,7 +5,32 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build"
+    "build": "vite build",
+    "build:fast": "vite build"
+  },
+  "dependencies": {
+    "@ant-design/x": "^1.3.0",
+    "@mozilla/readability": "^0.4.4",
+    "zustand": "^4.4.7",
+    "@ant-design/icons": "^5.2.6",
+    "antd": "^5.12.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.6",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@crxjs/vite-plugin": "^2.0.0-beta.21",
+    "@types/chrome": "^0.0.254",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^9.0.7",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "typescript": "^5.3.3",
+    "vite": "^4.5.0"
   },
   "keywords": [],
   "author": "",
