插件组合组件

--- a/packages/ai-chat-plug/public/manifest.json
+++ b/packages/ai-chat-plug/public/manifest.json
@@ -4,20 +4,25 @@
   "version": "1.0.0",
   "description": "智能AI对话助手浏览器插件",
   "action": {
-    "default_popup": "index.html",
+    "default_popup": "popup.html",
     "default_title": "AI Chat"
   },
-  "permissions": [
-    "storage",
-    "activeTab",
-    "contextMenus",
-    "scripting"
+  "background": {
+    "service_worker": "src/background.ts"
+  },
+  "permissions": ["storage", "activeTab", "contextMenus", "scripting"],
+  "host_permissions": ["<all_urls>"],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["src/content.tsx"],
+      "run_at": "document_end"
+    }
   ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
-  "web_accessible_resources": [{
-    "resources": ["assets/*"],
-    "matches": ["<all_urls>"]
-  }]
-} 
+  "web_accessible_resources": [
+    {
+      "resources": ["assets/*"],
+      "matches": ["<all_urls>"]
+    }
+  ]
+}
