--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.6.0",
+    "spark-md5": "^3.0.2",
     "tailwindcss": "^4.1.7",
     "zustand": "^5.0.4"
   },
@@ -41,6 +42,7 @@
     "@eslint/js": "^9.25.0",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.3.7",
+    "@types/spark-md5": "^3.0.5",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.5",
