--- a/packages/ai-chat-pc/package.json
+++ b/packages/ai-chat-pc/package.json
@@ -11,8 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "@ant-design/x": "^1.3.0",
     "@types/react-transition-group": "^4.4.12",
+    "antd": "^5.25.3",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "react-i18next": "^15.5.2",
     "react-transition-group": "^4.4.5",
     "tailwind-merge": "^3.3.0"
   }
