--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "antd": "^5.25.2",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "event-source-polyfill": "^1.0.31",
     "i18next": "^25.2.0",
     "i18next-browser-languagedetector": "^8.1.0",
     "react": "^18.3.1",
@@ -40,6 +41,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.25.0",
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.3.7",
     "@types/spark-md5": "^3.0.5",
