feat: 补充eslint校验规则，统一代码风格

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "antd": "^5.25.2",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "event-source-polyfill": "^1.0.31",
     "i18next": "^25.2.0",
     "i18next-browser-languagedetector": "^8.1.0",
@@ -40,23 +42,26 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/js": "^9.25.0",
+    "@eslint/js": "^9.27.0",
     "@types/event-source-polyfill": "^1.0.5",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.3.7",
     "@types/spark-md5": "^3.0.5",
+    "@typescript-eslint/parser": "^8.34.0",
     "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
+    "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.3",
     "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
+    "globals": "^16.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
+    "typescript-eslint": "^8.32.1",
     "vite": "^6.3.5"
   }
 }
