feat: 添加markdown、代码高亮依赖

--- a/packages/ai-chat-pc/package.json
+++ b/packages/ai-chat-pc/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@types/react-transition-group": "^4.4.12",
     "clsx": "^2.1.1",
+    "highlight.js": "^11.11.1",
+    "markdown-it": "^14.1.0",
+    "markdown-it-highlightjs": "^4.2.0",
     "react-transition-group": "^4.4.5",
     "tailwind-merge": "^3.3.0"
   }
